--- a/package.json
+++ b/package.json
@@ -5,12 +5,26 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "start": "node index.js",
+    "server": "nodemon index.js --ignore client"
   },
   "dependencies": {
+    "@toast-ui/editor": "^2.5.1",
     "core-js": "^3.6.5",
+    "dayjs": "^1.10.2",
+    "default-passive-events": "^2.0.0",
+    "echarts": "^4.2.0-rc.2",
+    "element-ui": "^2.14.1",
+    "lodash": "^4.17.20",
+    "mavon-editor": "^2.9.1",
+    "module": "^1.2.5",
+    "nprogress": "^0.2.0",
     "vue": "^2.6.11",
-    "vue-router": "^3.2.0",
+    "vue-draggable": "^2.0.6",
+    "vue-router": "^3.0.7",
+    "vue-table-with-tree-grid": "^0.2.4",
+    "vuedraggable": "^2.24.3",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
